# pmxlock

./: README.md  pmxlock.py  pyproject.toml
src/pmxlock/: __init__.py
src/pmxlock/cli/: gc.py  pmxlock.py
