[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pmxlock"
version = "0.0.4"
authors = [
  { name="Vadim Zudin", email="zudinvadim@gmail.com" },
]
description = "Cluster-wide Proxmox pmxcfs locks"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: POSIX",
]

[project.urls]
"Homepage" = "https://github.com/VadimZud/pmxlock"
"Bug Tracker" = "https://github.com/VadimZud/pmxlock/issues"

[project.scripts]
pmxlock = "pmxlock:main"